<resources>
    <string name="app_name">DenyNoNo</string>
    <string name="title">DenyNoNo</string>
    <string name="declaration">신고</string>
    <string name="record">녹음</string>
    <string name="carNumber">번호판 촬영</string>
    <string name="blackList">갤러리</string>
    <string name="takePicture">사진촬영</string>
    <string name="law">숙지사항</string>
    <string name="tip">tip 관련 내용</string>
    <string name="mediumTaxi">중형 택시 요금</string>
    <string name="bigTaxi">대형 택시 비용</string>
    <string name="result_tip">틀 안에 번호판을 인식 시켜주세요.</string>

</resources>